pgcenter (0.1.3) unstable; urgency=low

  * pg_stat_activity.query formatting.
  * fix crash on sticking keys.
  * fix crash on switching from erroneous screen.
  * fix log viewing/config editing when connected through unix socket.
  * implement pg_stat_statements.queryid for non-9.4 pg.
  * fix broken pg_stat_statements before 9.4.

 -- Alexey Lesovsky <lesovsky@gmail.com>  Sun, 28 Aug 2015 14:27:07 +0500

pgcenter (0.1.3) unstable; urgency=low

  * fix pg_stat_statements general for 9.1.
  * pg_stat_statements timing improvements.
  * truncate conninfo string if it too long.
  * add swap,dirty,writeback stats.
  * connection info moved from left to right side.
  * add memory stat.
  * reset stats counters when close screen.
  * remove unnecessary WHERE from qstats query.
  * fix segfault on screen switching when screen not exists.
  * fix pg general info display.
  * cmd_readline() rewritten.
  * add verbose query report based on query_stat_total.sql.
  * get query text uses md5 hash instead of queryid.
  * get query text using pg_stat_statements.queryid (9.4 only).
  * add queryid output into pg_stat_statements (9.4 only).
  * update info about postgres version after successful reconnect.
  * reset previous results when switching between screens.
  * fix crash when switching with empty previous results.
  * add pg_stat_statements for 9.0, 9.1.
  * add pg_stat_database, pg_stat_activity for 9.0, 9.1.
  * add postgres uptime.
  * fix parameters moving when console closed.
  * add pg version output in sysstat section.
  * fix broken multiple connections when log_min_duration_statement issued.
  * remove DEFAULT_HOST, DEFAULT_PORT; use libpq default behaviour.
  * improve add_connection(): reset counters, remove unnecessary vars.
 
 -- Alexey Lesovsky <lesovsky@gmail.com>  Sun, 28 Aug 2015 14:27:07 +0500

pgcenter (0.1.2) unstable; urgency=low
  * Improve do_query() func.
  * Set log_min_duration_statement = 10000 for used connections.